# django-react

./: .gitignore  README.md  pyproject.toml  run.sh
backend/: .gitignore
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Form.jsx  Note.jsx  ProtectedRoute.jsx
frontend/src/pages/: Home.jsx
